# I3M-Developer-Docs

./: README.md  canister_ids.json  dfx.json
.github/workflows/: deploy.yml
src/Developer-Docs/: .gitignore  .ic-assets.json  book.toml
src/Developer-Docs/.well-known/: ic-domains
src/Developer-Docs/src/: SUMMARY.md  introduction.md
src/Developer-Docs/src/ai/: navmesh.md  pathfinding.md
src/Developer-Docs/src/animation/: animation.md  blending.md
src/Developer-Docs/src/beginning/: assets.md  borrow_checker.md  data_management.md  editor_overview.md  getting_started.md  hot_reloading.md  scene_and_scene_graph.md  scripting.md
src/Developer-Docs/src/code/tutorials/platformer/: Cargo.toml  settings.ron
src/Developer-Docs/src/code/tutorials/platformer/editor/: Cargo.toml
src/Developer-Docs/src/code/tutorials/platformer/editor/src/: main.rs
src/Developer-Docs/src/code/tutorials/platformer/executor/: Cargo.toml
src/Developer-Docs/src/code/tutorials/platformer/executor/src/: main.rs
src/Developer-Docs/src/code/tutorials/platformer/game/: Cargo.toml
src/Developer-Docs/src/code/tutorials/platformer/game/src/: bot.rs  lib.rs  residuals.rs
src/Developer-Docs/src/engine/: manual_initialization.md
src/Developer-Docs/src/input/: input.md
src/Developer-Docs/src/introduction/: basic_concepts.md  faq.md  introduction.md  philosophy_and_goals.md  requirements.md
src/Developer-Docs/src/misc/: log.md
src/Developer-Docs/src/obsolete/: custom_game_loop.md
src/Developer-Docs/src/performance/: index.md
src/Developer-Docs/theme/: head.hbs
(+154 files in other folders)
